[gd_scene load_steps=8 format=3 uid="uid://coivutpp2emow"]

[ext_resource type="Shader" path="res://shaders/stars.gdshader" id="1_pqq62"]
[ext_resource type="Theme" uid="uid://5n3h1qs0uw07" path="res://styles/main_ui.tres" id="1_x1t1r"]
[ext_resource type="Texture2D" uid="uid://t0y2imme0gr" path="res://textures/logo.png" id="2_ideoo"]
[ext_resource type="Script" path="res://scripts/Stars.gd" id="2_qj2it"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="2_rpw4b"]
[ext_resource type="Texture2D" uid="uid://dht1068ha7imc" path="res://textures/ui.png" id="4_70vyp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kxwcg"]
shader = ExtResource("1_pqq62")
shader_parameter/octaves = 5
shader_parameter/viewport_size = Vector2(800, 600)
shader_parameter/player_position = Vector2(800, 600)
shader_parameter/displacement = Vector2(0, 0)

[node name="Menu" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x1t1r")
script = ExtResource("2_rpw4b")

[node name="Main" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -227.0
offset_right = 200.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="Menu/Main"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Menu/Main/Center"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Menu/Main/Center/VBox"]
texture_filter = 1
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
texture = ExtResource("2_ideoo")
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="Menu/Main/Center/VBox"]
custom_minimum_size = Vector2(280, 200)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Single" type="Button" parent="Menu/Main/Center/VBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Multi")
focus_next = NodePath("../Multi")
text = "SINGLEPLAYER"

[node name="Multi" type="Button" parent="Menu/Main/Center/VBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Single")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Single")
text = "MULTIPLAYER
"

[node name="Options" type="Button" parent="Menu/Main/Center/VBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../Multi")
focus_neighbor_bottom = NodePath("../Titles")
focus_next = NodePath("../Titles")
focus_previous = NodePath("../Multi")
text = "OPTIONS"

[node name="Titles" type="Button" parent="Menu/Main/Center/VBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Options")
text = "TITLES"

[node name="Exit" type="Button" parent="Menu/Main/Center/VBox/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Titles")
focus_previous = NodePath("../Titles")
text = "EXIT"

[node name="Options" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 852.0
offset_top = -200.0
offset_right = 1452.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/Options"]
texture_filter = 1
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_70vyp")
region_rect = Rect2(0, 0, 60, 60)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Menu/Options/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -147.0
offset_right = 140.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Menu/Options/NinePatchRect/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="OptionsBack" type="Button" parent="Menu/Options/NinePatchRect/VBox/Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "<BACK
"

[node name="Title" type="RichTextLabel" parent="Menu/Options/NinePatchRect/VBox/Control"]
custom_minimum_size = Vector2(212, 40)
layout_mode = 2
offset_left = 174.0
offset_top = 4.0
offset_right = 386.0
offset_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "OPTIONS"

[node name="Center" type="CenterContainer" parent="Menu/Options/NinePatchRect/VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="Menu/Options/NinePatchRect/VBox/Center"]
custom_minimum_size = Vector2(560, 300)
layout_mode = 2
tab_alignment = 1

[node name="Graphics" type="TabBar" parent="Menu/Options/NinePatchRect/VBox/Center/Tabs"]
layout_mode = 2

[node name="Sound" type="TabBar" parent="Menu/Options/NinePatchRect/VBox/Center/Tabs"]
visible = false
layout_mode = 2

[node name="Gameplay" type="TabBar" parent="Menu/Options/NinePatchRect/VBox/Center/Tabs"]
visible = false
layout_mode = 2

[node name="Controls" type="TabBar" parent="Menu/Options/NinePatchRect/VBox/Center/Tabs"]
visible = false
layout_mode = 2

[node name="Titles" type="MarginContainer" parent="Menu"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1404.0
offset_top = -300.0
offset_right = -900.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/Titles"]
layout_mode = 2

[node name="Center" type="CenterContainer" parent="Menu/Titles/NinePatchRect"]
layout_mode = 2
offset_right = 504.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Titles/NinePatchRect/Center"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Menu/Titles/NinePatchRect/Center/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
texture = ExtResource("2_ideoo")
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Titles/NinePatchRect/Center/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Space-Shipper
Made by Vladyslav Rudakevych
(Hexagon-Dev)"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu/Titles/NinePatchRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TitlesBack" type="Button" parent="Menu/Titles/NinePatchRect/MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "BACK>"

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background" node_paths=PackedStringArray("camera")]
material = SubResource("ShaderMaterial_kxwcg")
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("2_qj2it")
camera = NodePath("../../Camera2D")
is_menu = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Menu/Main/Center/VBox/VBox/Options" to="Menu" method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Main/Center/VBox/VBox/Titles" to="Menu" method="_on_titles_pressed"]
[connection signal="pressed" from="Menu/Main/Center/VBox/VBox/Exit" to="Menu" method="_on_exit_pressed"]
[connection signal="pressed" from="Menu/Options/NinePatchRect/VBox/Control/OptionsBack" to="Menu" method="_on_options_back_pressed"]
[connection signal="pressed" from="Menu/Titles/NinePatchRect/MarginContainer/TitlesBack" to="Menu" method="_on_titles_back_pressed"]
